# OJ-Rust

./: .gitlab-ci.yml  Cargo.toml  README.md
data/: database.db
src/: config.rs  database.rs  jobs.rs  main.rs
src/database/: mod.rs  problem.rs  submission.rs
tests/: common.rs
