[package]
name = "oj"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.11.0"
env_logger = "0.11.8"
log = "0.4.27"

[dev-dependencies]
assert-json-diff = "2.0.2"
pretty_assertions = "1.4.1"
serde_json = "1.0.142"
serde = { version = "1.0.219", features = ["derive"] }
reqwest = { version = "0.12.23", features = ["json", "blocking"] }
