[package]
name = "oj"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.11.0"
anyhow = "1.0.99"
env_logger = "0.11.8"
lazy_static = "1.5.0"
log = "0.4.27"
serde = "1.0.219"
serde_json = "1.0.142"
sqlite = "0.37.0"

[dev-dependencies]
assert-json-diff = "2.0.2"
pretty_assertions = "1.4.1"
reqwest = { version = "0.12.23", features = ["json", "blocking"] }
serde = { version = "1.0.219", features = ["derive"] }
