[package]
name = "oj"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.11.0"
env_logger = "0.11.8"
lazy_static = "1.5.0"
log = "0.4.27"
r2d2 = "0.8.10"
r2d2_sqlite = "0.31.0"
serde = "1.0.219"
serde_json = "1.0.142"

[dev-dependencies]
assert-json-diff = "2.0.2"
pretty_assertions = "1.4.1"
reqwest = { version = "0.12.23", features = ["json", "blocking"] }
serde = { version = "1.0.219", features = ["derive"] }
